--- a/AvaloniaLibraryManagementSystemModels/AvaloniaLibraryManagementSystemModels.csproj
+++ b/AvaloniaLibraryManagementSystemModels/AvaloniaLibraryManagementSystemModels.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Avalonia" Version="11.0.10" />
       <PackageReference Include="EntityFramework" Version="6.5.1" />
       <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
       <PackageReference Include="System.Data.SQLite.Core" Version="1.0.118" />
